# axum_back

./: .env  .env.development  .env.test  Cargo.toml  Dockerfile
src/: config.rs  main.rs  price_item.rs
src/app/: mod.rs
src/app/price_list/: dto.rs  mod.rs  models.rs  routes.rs
src/infra/: mod.rs
src/infra/config/: mod.rs
src/infra/databases/: mongo.rs
src/infra/tests/: mod.rs
src/lib/: custom_response.rs  errors.rs  mod.rs  query_pagination.rs  validated_dto.rs
src/price_list/: dto.rs
src/price_list/routes/: mod.rs  price_items.rs
