[package]
name = "axum_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
tokio = {version = "1.20.1", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tower = {version = "0.4.13", features = ["util"] }
mime = "0.3.16"
validator = { version = "0.16.0", features = ["derive"] }
http-body = "0.4.5"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
mongodb = "2.3.0"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
dotenv = "0.15.0"
thiserror = "1.0.32"
futures = "0.3"
